src/tests/snapshots/nyx__tests__window_opening__check_fullscreen_maximize@fsT-tmT.snap
---
source: src/tests/window_opening.rs
assertion_line: 871
description: "config:\nwindow-rule {\n    open-fullscreen true\n    open-maximized-to-edges true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Maximized, Activated]

unmaximize configure:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
